Alteração na estrutura da página

--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@
         </button>
       </header>
 
-      <div class="main__content" data-content></div>
+      <div class="main__content" data-content>
+        <div class="main__catalog" data-catalog="consoles"></div>
+        <div class="main__catalog" data-catalog="keyrings"></div>
+        <div class="main__catalog" data-catalog="canvases"></div>
+        <div class="main__catalog" data-catalog="actionFigures"></div>
+      </div>
     </main>
 
     <aside class="info">
