Alteração na estrutura da página

--- a/app/screens/editor.html
+++ b/app/screens/editor.html
@@ -1,4 +1,4 @@
-<main>
+<div data-load="context">
   <section class="editor">
     <h1 class="editor__title">Adicionar produto</h1>
 
@@ -38,4 +38,4 @@
       <input type="submit" value="Adicionar produto">
     </form>
   </section>
-</main>
+</div>
