Alteração na estrutura da página

--- a/app/screens/login.html
+++ b/app/screens/login.html
@@ -1,4 +1,4 @@
-<main>
+<div data-load="context">
   <form class="login">
     <fieldset>
       <legend class="login__title">Faça Login</legend>
@@ -16,4 +16,4 @@
 
     <input class="login__button" type="submit" value="Entrar">
   </form>
-</main>
+</div>
