Alteração na estrutura da página

--- a/app/screens/products.html
+++ b/app/screens/products.html
@@ -1,6 +1,15 @@
-<main>
+<div data-load="context">
   <header class="main__hero">
     <h1 class="hero__title">Encontre seus produtos aqui</h1>
-    <p class="hero__description">Os melhores proutos para aumentar a sua coleção.</p>
+    <p class="hero__description">
+      Os melhores proutos para aumentar a sua coleção.
+    </p>
   </header>
-</main>
+
+  <div class="main__content" data-content>
+    <div class="main__catalog" data-catalog="consoles"></div>
+    <div class="main__catalog" data-catalog="keyrings"></div>
+    <div class="main__catalog" data-catalog="canvases"></div>
+    <div class="main__catalog" data-catalog="actionFigures"></div>
+  </div>
+</div>
