Atributo alterado para evitar conflitos

--- a/app/screens/editor.html
+++ b/app/screens/editor.html
@@ -1,4 +1,4 @@
-<div data-load="context">
+<div data-main="context">
   <section class="editor">
     <h1 class="editor__title">Adicionar produto</h1>
 
@@ -35,7 +35,7 @@
         </div>
       </fieldset>
 
-      <input type="submit" value="Adicionar produto">
+      <input type="submit" value="Adicionar produto" />
     </form>
   </section>
 </div>
