--- a/app/screens/products.html
+++ b/app/screens/products.html
@@ -1,4 +1,4 @@
-<div data-load="context">
+<div data-main="context">
   <header class="main__hero">
     <h1 class="hero__title">Encontre seus produtos aqui</h1>
     <p class="hero__description">
