--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
     <title>Alura Geek</title>
   </head>
-  <body data-context="index">
-    <header>
+  <body class="context" data-context="index">
+    <header class="context__header">
       <div class="header__logo">
         <img src="./app/assets/images/alura_geek_logo.svg" alt="" />
       </div>
@@ -66,14 +66,14 @@
       </button>
     </header>
 
-    <main>
+    <main class="context__main">
       <header class="main__hero">
         <h1 class="hero__title">Produtos <span lang="en">Geek</span></h1>
-        <p class="hero__description">
+        <p class="hero__desc">
           Para aqueles que amam as séries, jogos, filmes e quadrinhos que
           marcaram gerações.
         </p>
-        <button class="hero__button" type="button" data-load="products">
+        <button class="hero__btn" type="button" data-load="products">
           Ver Todos
         </button>
       </header>
@@ -82,10 +82,10 @@
       </div>
     </main>
 
-    <aside class="info">
+    <aside class="context__info">
       <a
         href="./index.html"
-        class="navigation__link logo"
+        class="info__link"
         title="Voltar ao Início"
       >
         <img
@@ -95,42 +95,42 @@
         />
       </a>
 
-      <nav class="info__navigation">
-        <ul class="navigation__list">
-          <li class="navigation__item">
-            <a href="" class="navigation__link">Quem somos nós</a>
+      <nav class="info__nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="" class="nav__link">Quem somos nós</a>
           </li>
 
-          <li class="navigation__item">
-            <a href="" class="navigation__link">Política de privacidade</a>
+          <li class="nav__item">
+            <a href="" class="nav__link">Política de privacidade</a>
           </li>
 
-          <li class="navigation__item">
-            <a href="" class="navigation__link">Programa de fidelidade</a>
+          <li class="nav__item">
+            <a href="" class="nav__link">Programa de fidelidade</a>
           </li>
-          <li class="navigation__item">
-            <a href="" class="navigation__link">Nossas lojas</a>
-          </li>
-
-          <li class="navigation__item">
-            <a href="" class="navigation__link">Quero ser franqueado</a>
+          <li class="nav__item">
+            <a href="" class="nav__link">Nossas lojas</a>
           </li>
 
-          <li class="navigation__item">
-            <a href="" class="navigation__link">Anuncie aqui</a>
+          <li class="nav__item">
+            <a href="" class="nav__link">Quero ser franqueado</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="" class="nav__link">Anuncie aqui</a>
           </li>
         </ul>
       </nav>
 
-      <form action="index.html" class="info__contact">
-        <fieldset class="contact__fieldset">
-          <legend class="fieldset__legend">Fale conosco</legend>
+      <form action="index.html" class="context__contact">
+        <fieldset class="contact--fieldset">
+          <legend class="contact__legend">Fale conosco</legend>
 
-          <label class="fieldset__section"
+          <label class="contact__section"
             >Nome <input type="text" class="section__input"
           /></label>
 
-          <label class="fieldset__section"
+          <label class="contact__section"
             >Mensagem
             <textarea name="message" class="section__textarea"></textarea>
           </label>
@@ -140,8 +140,8 @@
       </form>
     </aside>
 
-    <footer class="footer">
-      <p>
+    <footer class="context__footer">
+      <p class="footer__description">
         Desenvolvido por
         <a
           href="https://github.com/trsaints/challenge-ecommerce/"
