--- a/app/screens/products.html
+++ b/app/screens/products.html
@@ -1,4 +1,4 @@
-<div data-main="context">
+<main class="context__main" data-main="context">
   <header class="main__hero">
     <h1 class="hero__title">Encontre seus produtos aqui</h1>
     <p class="hero__description">
@@ -8,4 +8,4 @@
 
   <div class="main__content" data-content>
   </div>
-</div>
+</main>
