--- a/app/screens/products.html
+++ b/app/screens/products.html
@@ -1,7 +1,7 @@
-<main class="context__main" data-main="context">
+<main class="context__main--products" data-main="context">
   <header class="main__hero">
     <h1 class="hero__title">Encontre seus produtos aqui</h1>
-    <p class="hero__description">
+    <p class="hero__desc">
       Os melhores proutos para aumentar a sua coleção.
     </p>
   </header>
