--- a/app/screens/editor.html
+++ b/app/screens/editor.html
@@ -2,7 +2,7 @@
   <section class="editor">
     <h1 class="editor__title">Adicionar produto</h1>
 
-    <form class="editor__form">
+    <form class="editor__form" data-form="editor">
       <fieldset class="editor__fieldset" >
         <legend class="editor__legend">Detalhes do produto</legend>
 
@@ -22,7 +22,12 @@
             data-select="category"
             id="category"
             class="editor__select"
-          ></select>
+          >
+          <option value="actionFigures">Action Figures</option>
+          <option value="canvases">Quadros</option>
+          <option value="consoles">Consoles</option>
+          <option value="keyrings">Chaveiros</option>
+        </select>
         </div>
 
         <div class="editor__field">
