Implementação de utilitário para screen readers

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <button class="header__search--button" data-load="search" type="button">
           <i class="fas fa-search"></i>
-          Buscar
+          <span class="sr-only"> Buscar </span>
         </button>
       </div>
 
@@ -130,7 +130,11 @@
             <textarea name="message" class="section__textarea"></textarea>
           </label>
 
-          <input class="contact__submit" type="submit" value="Enviar mensagem" />
+          <input
+            class="contact__submit"
+            type="submit"
+            value="Enviar mensagem"
+          />
         </fieldset>
       </form>
     </aside>
