Correção de endereço em link

--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
       <p class="footer__description">
         Desenvolvido por
         <a
-          href="https://github.com/trsaints/challenge-ecommerce/"
+          target="_blank"
+          href="https://github.com/trsaints/alura-geek/"
           class="footer__link"
           >@trsaints</a
         ><br />
