Alteração em ícone de link

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     <aside class="context__info">
       <a href="./index.html" class="info__link" title="Voltar ao Início">
         <img
-          src="./app/assets/images/alura_geek_logo_dark.svg"
-          alt=""
+          src="./app/assets/images/alura_geek_logo.svg"
+          alt="Logo do Alura Geek. Um controle de videogame vermelho, ao lado do texto 'Alura Geek'"
           class="info__logo"
         />
       </a>
