--- a/index.html
+++ b/index.html
@@ -82,7 +82,73 @@
         </button>
       </header>
 
-      <div class="main__content" data-content></div>
+      <nav class="main__nav" data-content="navbar">
+        <h2 class="main__nav--title">Navegue por categoria</h2>
+        <ul class="main__nav--links">
+          <li class="main__nav--item">
+            <a class="main__nav--link" href="#actionFigures">
+              <figure class="nav__link--figure">
+                <img
+                  src="./app/assets/images/erik-mclean-yan_kDfdttA-unsplash.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  Action Figures
+                  <i class="fa-solid fa-robot" aria-hidden="true"></i>
+                </figcaption>
+              </figure>
+            </a>
+          </li>
+
+          <li class="main__nav--item">
+            <a class="main__nav--link" href="#consoles">
+              <figure class="nav__link--figure">
+                <img
+                  src="./app/assets/images/martin-katler-caNzzoxls8Q-unsplash.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  Consoles
+                  <i class="fa-solid fa-gamepad" aria-hidden="true"></i>
+                </figcaption>
+              </figure>
+            </a>
+          </li>
+          <li class="main__nav--item">
+            <a class="main__nav--link" href="#canvases">
+              <figure class="nav__link--figure">
+                <img
+                  src="./app/assets/images/nick-fewings-U32A5WknnA4-unsplash.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  Quadros <i class="fa-solid fa-palette" aria-hidden="true"></i>
+                </figcaption>
+              </figure>
+            </a>
+          </li>
+          <li class="main__nav--item">
+            <a class="main__nav--link" href="#keyrings">
+              <figure class="nav__link--figure">
+                <img
+                  src="./app/assets/images/pexels-melike-benli-12615733.jpg"
+                  alt=""
+                />
+                <figcaption>
+                  Chaveiros <i class="fa-solid fa-key" aria-hidden="true"></i>
+                </figcaption>
+              </figure>
+            </a>
+          </li>
+        </ul>
+
+        <a href="#" class="main__nav--scrollup">
+          <span class="sr-only">Voltar ao topo</span>
+          <i class="fa-solid fa-chevron-up" aria-hidden="true"></i>
+        </a>
+      </nav>
+
+      <div class="main__content" data-content="catalog"></div>
     </main>
 
     <aside class="context__info">
