Correção em atributo mal escrito

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <legend class="contact__legend">Fale conosco</legend>
 
           <label class="contact__section">
-            <span clas="contact__section--label"
+            <span class="contact__section--label"
               >Nome <i class="fa-solid fa-user" aria-hidden="true"></i
             ></span>
             <input type="text" class="section__input" />
